[package]
name = "onkostar-dev-tools"
description = "Tools zur Abfrage und Anpassung von Datenbankeinträgen in der Onkostar-Plugin-Entwicklung"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["std", "help", "usage", "derive", "error-context" ], default-features = false }
dialoguer = "0.10"
console = "0.15"
indicatif = "0.17"
mysql = "*"
regex = "1"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = "debuginfo"
